fix: responsive ofset bug  on tablet mode
sample :  http://codepen.io/anon/pen/wKOYqG

--- a/less/metro-responsive.less
+++ b/less/metro-responsive.less
@@ -96,6 +96,11 @@ h1, h2, h3, h4, h5, h6, p  {
                 &:nth-child(odd) {
                     margin-left: 0;
                 }
+                
+                &:nth-child(even) {
+                    margin-left: 2.12765%;
+                }
+                
                 &:nth-child(1):last-child,
                 &:nth-child(3):last-child,
                 &:nth-child(5):last-child,
@@ -116,6 +121,10 @@ h1, h2, h3, h4, h5, h6, p  {
             & > .cell, & > .cell[class*=colspan] {
                 width: 100%;
                 margin: .3125rem 0;
+                
+                &:nth-child(even) {
+                    margin-left: 0;
+                }
             }
         }
     }
@@ -132,7 +141,11 @@ h1, h2, h3, h4, h5, h6, p  {
                     &:nth-child(odd) {
                         margin-left: 0;
                     }
-
+                    
+                    &:nth-child(even) {
+                        margin-left: 0;
+                    }
+                    
                     &:nth-child(1):last-child,
                     &:nth-child(3):last-child,
                     &:nth-child(5):last-child,
